# pytorch-researcher

./: .gitignore  AGENTS.md  DEPENDENCIES.md  README.md  STATUS.md  memori_patches.py  pyproject.toml  test_enhanced_evaluation.py  test_enhanced_metrics.py
docs/: MEMORI_CONFIG.md  METRICS_PLAN.md  PRD2.md  TECHNICAL_PAPER.md  TECHNICAL_PAPER_1.md  TECHNICAL_SPEC.md
docs/completed/: ENHANCED_EVALUATION_SUMMARY.md  HIGH_LEVEL_PLAN.md  IMPLEMENTATION_COMPLETE.md  MVP.md  PHASE0_PLAN.md  PHASE4_PLAN.md
docs/planned/: DEEP_RESEARCH.md
examples/: README.md
pytorch_researcher/: __version__.py
pytorch_researcher/src/: agent_orchestrator.py  research_report_generator.py  utils.py
pytorch_researcher/src/memory/: __init__.py  manual_memory_manager.py
pytorch_researcher/src/planning_llm/: client.py
pytorch_researcher/src/pytorch_tools/: __init__.py  dataset_loader.py  llm.py  llm_logger.py  model_assembler.py  model_assembler_llm.py  model_summary.py  quick_evaluator.py
pytorch_researcher/src/tools/sandbox/: sandbox_runner.py
tests/: conftest.py  debug_call.py  run_python_run_debug.py  test_input_size_extraction.py  test_utils.py
tests/pytorch_tools/: test_model_assembler.py  test_model_summary_and_quick_eval.py
