[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytorch-ml-research-agent"
version = "0.1.0"
description = "Autonomous PyTorch ML Research Agent with LLM-driven architectural exploration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PyTorch ML Research Agent Team", email = "mrorigo@gmail.com"}
]
keywords = [
    "machine-learning", "pytorch", "llm", "research", "automation",
    "neural-networks", "deep-learning"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    # Core ML and Data Science
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.7.2",

    # Dataset and Model Management
    "datasets>=2.0.0",
    "transformers>=4.20.0",
    "huggingface-hub>=0.15.0",
    "safetensors>=0.3.0",
    "tokenizers>=0.13.0",

    # HTTP and API clients
    "httpx>=0.24.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",

    # LLM Integration
    "pydantic>=2.0.0",

    # Data Processing
    "pyarrow>=10.0.0",
    "pillow>=9.0.0",

    # Configuration and Utilities
    "pyyaml>=6.0",
    "tqdm>=4.64.0",
    "jinja2>=3.1.0",
    "typing-extensions>=4.5.0",

    # Async and Concurrency
    "anyio>=4.0.0",
    "sniffio>=1.3.0",
    "h11>=0.14.0",

    # Date and Time
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    "tzdata>=2023.3",

    # Network and File Handling
    "filelock>=3.8.0",
    "fsspec>=2023.0.0",
    "charset-normalizer>=3.0.0",
    "idna>=3.4.0",
    "certifi>=2023.0.0",
    "urllib3>=2.0.0",

    # Serialization and Data Formats
    "attrs>=22.0.0",
    "six>=1.16.0",
    "regex>=2023.0.0",

    # Advanced Data Structures
    "multidict>=6.0.0",
    "frozenlist>=1.3.0",
    "multiprocess>=0.70.0",
    "dill>=0.3.0",
    "xxhash>=3.0.0",

    # Performance and Caching
    "propcache>=0.4.0",
    "aiosignal>=1.4.0",
    "aiohappyeyeballs>=2.6.0",

    # Mathematical and Scientific Computing
    "mpmath>=1.3.0",
    "sympy>=1.12.0",
    "networkx>=3.0",

    # Code Quality and Syntax
    "markupsafe>=2.1.0",
    "pygments>=2.15.0",
    "jiter>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.1.0",
]

evaluation = [
    "datasets>=2.0.0",
    "transformers>=4.20.0",
    "huggingface-hub>=0.15.0",
    "safetensors>=0.3.0",
    "tokenizers>=0.13.0",
]

vision = [
    "torchvision>=0.15.0",
    "pillow>=9.0.0",
    "opencv-python>=4.8.0",
    "albumentations>=1.3.0",
]

nlp = [
    "transformers>=4.20.0",
    "tokenizers>=0.13.0",
    "datasets>=2.0.0",
    "spacy>=3.6.0",
    "nltk>=3.8.0",
]

all = [
    "pytorch-ml-research-agent[dev,evaluation,vision,nlp]",
]

[project.urls]
Homepage = "https://github.com/pytorch-researcher/pytorch-ml-research-agent"
Documentation = "https://pytorch-ml-research-agent.readthedocs.io"
Repository = "https://github.com/pytorch-researcher/pytorch-ml-research-agent.git"

[project.scripts]
research-agent = "pytorch_researcher.src.agent_orchestrator:main"
quick-evaluator = "pytorch_researcher.src.pytorch_tools.quick_evaluator:main"

[tool.hatch.build.targets.wheel]
packages = ["pytorch_researcher"]

[tool.hatch.version]
path = "pytorch_researcher/__version__.py"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=pytorch_researcher",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests as requiring GPU",
    "llm: marks tests as requiring LLM access",
]

[tool.black]
line-length = 88
target-version = ['py311', 'py312']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["pytorch_researcher"]
known_third_party = [
    "torch",
    "torchvision",
    "datasets",
    "transformers",
    "numpy",
    "pandas",
    "pytest",
    "httpx",
    "openai",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg",
    "pytorch_researcher/_version.py",
]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:F401,F811",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "datasets.*",
    "transformers.*",
    "huggingface_hub.*",
    "safetensors.*",
    "tokenizers.*",
    "numpy.*",
    "pandas.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["pytorch_researcher"]
omit = [
    "*/tests/*",
    "*/_version.py",
    "*/site-packages/*",
    "*/.venv/*",
    "*/build/*",
    "*/dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
    "D",  # pydocstyle
    "T20", # flake8-print
    "PT", # flake8-pytest-style
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "pytorch_researcher/_version.py",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D", "PT", "T20"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]
