[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytorch-ml-research-agent"
version = "0.1.0"
description = "Autonomous PyTorch ML Research Agent with conscious memory management and LLM-driven model exploration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PyTorch ML Research Agent Team", email = "mrorigo@gmail.com"}
]
keywords = [
    "machine-learning", "pytorch", "llm", "research", "automation",
    "neural-networks", "deep-learning", "memori", "conscious-memory"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    # Core ML Framework
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    
    # Numerical Computing
    "numpy>=1.24.0",
    
    # LLM Integration
    "memorisdk @ https://github.com/GibsonAI/Memori/archive/refs/tags/v2.1.1.tar.gz",
    "litellm>=1.80.0",
    "tenacity>=8.0.0",
    
    # Image Processing (used by torchvision datasets)
    "pillow>=9.0.0",
    
    # Utility Libraries
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.1.0",
]

evaluation = [
    "torchvision>=0.15.0",
    "pillow>=9.0.0",
]

vision = [
    "torchvision>=0.15.0",
    "pillow>=9.0.0",
]

nlp = [
    # NLP features not currently implemented
]

all = [
    "pytorch-ml-research-agent[dev,evaluation,vision,nlp]",
]

[project.urls]
Homepage = "https://github.com/pytorch-researcher/pytorch-ml-research-agent"
Documentation = "https://pytorch-ml-research-agent.readthedocs.io"
Repository = "https://github.com/pytorch-researcher/pytorch-ml-research-agent.git"

[project.scripts]
research-agent = "pytorch_researcher.src.agent_orchestrator:main"
quick-evaluator = "pytorch_researcher.src.pytorch_tools.quick_evaluator:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pytorch_researcher"]

[tool.hatch.version]
path = "pytorch_researcher/__version__.py"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=pytorch_researcher",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests as requiring GPU",
    "llm: marks tests as requiring LLM access",
]

[tool.black]
line-length = 88
target-version = ['py311', 'py312']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["pytorch_researcher"]
known_third_party = [
    "torch",
    "torchvision",
    "numpy",
    "memori",
    "litellm",
    "pytest",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg",
    "pytorch_researcher/_version.py",
]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:F401,F811",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "numpy.*",
    "memori.*",
    "litellm.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["pytorch_researcher"]
omit = [
    "*/tests/*",
    "*/_version.py",
    "*/site-packages/*",
    "*/.venv/*",
    "*/build/*",
    "*/dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
    "D",  # pydocstyle
    "T20", # flake8-print
    "PT", # flake8-pytest-style
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "pytorch_researcher/_version.py",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D", "PT", "T20"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]
